InterOrgComparer/src/objects/Comparison_Log__c.object
<CustomObject>
    <description>Custom object to store comparison status of objects and fields.</description>
    <fields>
        <fullName>Attribute__c</fullName>
        <description>Determines the object or field attributes which are being compared.</description>
        <inlineHelpText>Determines the object or field attributes which are being compared.</inlineHelpText>
        <label>Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComparisonType__c</fullName>
        <formula>IF(NOT(ISBLANK(Object__c)),&apos;Object Comparison&apos;,&apos;Field Comparison&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComparisonType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comparison_Field_Source__c</fullName>
        <description>Formula to get the source field to which the current field is being compared.</description>
        <formula>Field__r.Comparison_Source__c</formula>
        <inlineHelpText>Formula to get the source field to which the current field is being compared.</inlineHelpText>
        <label>Comparison Field Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comparison_Object_Source__c</fullName>
        <description>Formula to get the source object to which the current object is being compared.</description>
        <formula>Object__r.Comparison_Source__c</formula>
        <inlineHelpText>Formula to get the source object to which the current object is being compared.</inlineHelpText>
        <label>Comparison Object Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Field Information.</description>
        <inlineHelpText>Lookup to Field Information.</inlineHelpText>
        <label>Field</label>
        <referenceTo>Field_Information__c</referenceTo>
        <relationshipLabel>Comparison Logs</relationshipLabel>
        <relationshipName>Comparison_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Match__c</fullName>
        <description>Signifies whether the match has occurred or not.</description>
        <inlineHelpText>Signifies whether the match has occurred or not.</inlineHelpText>
        <label>Match</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Object Information.</description>
        <inlineHelpText>Lookup to Object Information.</inlineHelpText>
        <label>Object</label>
        <referenceTo>Object_Information__c</referenceTo>
        <relationshipLabel>Comparison Logs</relationshipLabel>
        <relationshipName>Comparison_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Comparison Log</label>
    <nameField>
        <displayFormat>CL-{00000000}</displayFormat>
        <label>Comparison Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comparison Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>